fixed broken scrollbar

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -13,9 +13,8 @@
     position: relative;
   }
   &-list {
-    overflow-y: auto;
-    padding: 10px 8px 50px;
-    height: 100%;
+    overflow: scroll;
+    height: 100vh;
   }
   &-item {
     display: block;
